# phase-ripper-vst-alpha

./: CMakeLists.txt  README.md  Shearing Force Phase Ripper Spec Doc.docx  classes.txt
include/: ContinuousAutomationHandler.hpp  CubicBezierFunction.hpp  CubicBezierPoint.hpp  DCOffsetFilter.hpp  DeltaData.hpp  DiscreteAutomation.hpp  EnvelopeGenerator.hpp  ExpBezierFn.hpp  HarmonicFlipInfo.hpp  HarmonicFlipper.hpp  NoteBank.hpp  NoteInfo.hpp  StereoAudioOutputFramebuffer.hpp  plugcontroller.hpp  plugids.hpp  plugprocessor.hpp  version.hpp
resource/: Info.plist
source/: ContinuousAutomationHandler.cpp  CubicBezierFunction.cpp  DCOffsetFilter.cpp  ExpBezierFn.cpp  HarmonicFlipper.cpp  NoteBank.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
tests/: test.cpp
